# zjlibpd

./: README.md
crawler/: .gitignore  pyproject.toml  scrapy.cfg  validate.py
crawler/zjlibpd_crawler/: items.py  middlewares.py  pipelines.py  settings.py
crawler/zjlibpd_crawler/spiders/: books.py
uploader/: .gitignore  _gen.py  bootstrap_venv.sh  gen1.py  pyproject.toml  upload1.py
