[tool.poetry]
name = "uploader"
version = "0.1.0"
description = ""
authors = ["Hung-I <whygowe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pywikibot = "^9.1.2"
requests = "^2.31.0"
PyYAML = "^6.0.1"
zhconv-rs = "^0.3.1"
mergedeep = "^1.3.4"

[tool.poetry.group.dev.dependencies]
pyink = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
